@@ -5,8 +5,10 @@ import com.mrbreaknfix.noreposts.utils.OsUtils;
 import net.fabricmc.loader.api.FabricLoader;
 import net.fabricmc.loader.api.ModContainer;
 import net.fabricmc.loader.api.entrypoint.PreLaunchEntrypoint;
+import net.fabricmc.loader.api.metadata.ModOrigin;
 
 import java.nio.file.Path;
+import java.util.List;
 
 
 public class NoReposts implements PreLaunchEntrypoint {
@@ -33,33 +35,38 @@ public class NoReposts implements PreLaunchEntrypoint {
                 String modId = metadata.getId();
                 ModContainer mod = FabricLoader.getInstance().getModContainer(modId).isPresent() ? FabricLoader.getInstance().getModContainer(modId).get() : null;
                 if (mod == null) {
-                    System.out.println("Mod " + metadata.getName() + " is not present in the mod container.");
+                    System.out.println("Mod " + metadata.getName() + " is not present in the mod container. You should not be able to see this message under normal circumstances.");
                     return;
                 }
 
+
                 try {
-                    Path modPath = mod.getOrigin().getPaths().get(0);
-//                    System.out.println("Mod " + metadata.getName() + " has full path: " + modPath);
+                    // Skips nested mods
+                    if (mod.getOrigin().getKind() == ModOrigin.Kind.NESTED) return;
+
+                    Path modPath = mod.getOrigin().getPaths().getFirst();
+
+                    // Get file name
+                    String fileName = modPath.getFileName().toString();
+                    System.out.println("Checking mod " + metadata.getName() + " with file name: " + fileName);
 
                     // Windows checks:
                     if (OsUtils.isWindows()) {
 
                         // Matches sites
                             try {
-                                String fromSite = ADSCheck.getMatchingOriginFromRegex(modPath.toFile(), origins);
-                                if (fromSite == null) {
-                                    System.out.println("Mod " + metadata.getName() + " was not downloaded from a listed site. Under normal conditions this message should not be visible.");
-                                    return;
-                                }
+                                List<String> fromSites = ADSCheck.getSites(modPath.toFile());
                                 // check if the regex matches the 9minecraft one
-                                if (fromSite.matches(origins[0])) {
-                                    System.out.println("Mod " + metadata.getName() + " was downloaded from the correct site! " + fromSite);
-                                } else if (fromSite.matches(origins[1])) {
-                                    System.out.println("Mod " + metadata.getName() + " was downloaded from a 9minecraft site: " + fromSite);
-                                } else if (fromSite.matches(origins[2])) {
-                                    System.out.println("Mod " + metadata.getName() + " was downloaded from a github site which is not Coderx-Gamer's: " + fromSite);
-                                } else {
-                                    System.out.println("Mod " + metadata.getName() + " was downloaded from a blacklisted site: " + fromSite);
+                                for (String fromSite : fromSites) {
+                                    if (fromSite.matches(origins[0])) {
+                                        System.out.println("Mod " + metadata.getName() + " was downloaded from the correct site! " + fromSite);
+                                    } else if (fromSite.matches(origins[1])) {
+                                        System.out.println("Mod " + metadata.getName() + " was downloaded from a 9minecraft site: " + fromSite);
+                                    } else if (fromSite.matches(origins[2])) {
+                                        System.out.println("Mod " + metadata.getName() + " was downloaded from a github site which is not Coderx-Gamer's: " + fromSite);
+                                    } else {
+                                        System.out.println("Mod " + metadata.getName() + " was downloaded from: " + fromSite);
+                                    }
                                 }
 
 
